Prevent scrollbar from showing up when opening the menu

--- a/styles/basic.styl
+++ b/styles/basic.styl
@@ -5,7 +5,7 @@ html, body
     height 100%
     width 100%
     box-sizing border-box
-    overflow auto
+    overflow hidden
 
 main
     position absolute
